osp/static/css/profile-edit-style.css
@media (min-width: 768px) {
  .col-my-p20 {
    flex: 0 0 auto;
    width: 20%;
  }
}

@media (max-width: 768px) {
  #profile-info-edit {
    margin-top: 50px;
  }
}

@media (max-width: 992px) {
  #for-photo-delete {
    margin-right: 75px !important;
  }
  #for-photo {
    margin-right: 0 !important;
  }
}

div.edit-container {
  height: 500px;
  margin-bottom: 1rem;
}

h5.card-title {
  margin-top: 15px;
  font: 16px;
  font-weight: 500;
  text-indent: 20px;
}

.card {
  height: 500px;
}

a.nav-link {
  cursor: pointer;
}

.infoform-element{
  margin-right: 5px;
}

.d-flex.text-lg > .btn-toolbar {
  margin-right: 20px;
}
.d-flex.text-lg > .dropdown {
  margin-right: 30px;
}

.dropdown-scrollbar
{
    height: 400px;
    overflow: scroll;
}

.delete-domain{
  background-color: rgb(211,211,211);
  height: 20px;
  border:0;
  outline: 0;
  color: #000000;
  text-align: center;
  line-height:8px;
  padding-left: 6px;
  margin-left: 10px;
  margin-top:10px;
  margin-bottom: 10px;
  border-radius: 8px 8px 8px 8px;
  
}
.delete-domain:hover{
  background-color: #121314;

  
}
.delete-badge{
  width:30px;
  margin-left: -10px;
  margin-right: -3px;

}
.bg-tag-domain {
  color: #000000 !important;
  background-color: var(--tag-bg-domain) !important;
  font-weight: 700 !important;
  height: 20px;
  top:-10px;
}

#ints_delete{
  color :black;
}

#for-photo{
  position:relative;
  display:block;
  text-align: center;
  background-color: rgb(79, 173, 224);
  color: white;
  cursor: pointer;
  border-radius: 0.3rem;
  width: 25px;
  margin:auto;
  margin-top: -20px;
  margin-right: 20px;
  z-index: 6;
}

#for-photo-delete {
  position:relative;
  display:block;
  text-align: center;
  background-color: rgb(234, 10, 10);
  color: white;
  cursor: pointer;
  border-radius: 0.3rem;
  width: 25px;
  margin:auto;
  margin-top: -24px;
  margin-right: 115px;
  z-index: 6;
}

.range-wrap {
  position: relative;
  margin: 0 auto 3rem;
}
.range {
  width: 100%;
}


.delete-lang{

  color:black;
  border:0;
  outline: 0;
  padding-left: 30px;
  padding-right: 3px;
  padding-top: 1px;
  padding-bottom: 1px;
  margin-left:auto;
}

.delete-lang:hover{

  background-color: none;
  border:0;
  outline: 0;
  padding-left: 30px;
  padding-right: 3px;
  padding-top: 1px;
  padding-bottom: 1px;
  margin-left:auto;
}

.delete-lang svg{
  fill: black;
}

.delete-lang:hover svg{
  fill: gray;
}

.appendbtn{
  /* + */
border:0;
outline: 0;
width: 28px;
height: 36px;
padding-right: 6px;
font-family: 'Inter';
font-style: normal;
font-weight: 400;
font-size: 20px;
line-height: 36px;
border-radius: 6px;

color: #000000;


/* Inside auto layout */
flex: none;
order: 0;
flex-grow: 0;


}

.savebtn{
width: 100px;
height: 30px;
font-family: 'Inter';
font-style: normal;
font-weight: 400;
font-size: 18px;
line-height: 22px;
/* identical to box height */
border-radius: 10px;
margin-left: 5px;

background-color: #E7EDF1;
color: #000000;


/* Inside auto layout */

flex: none;
order: 0;
flex-grow: 0;


}

.stack-box.dragging{
  opacity: 0.5;
   
}



.tier-container{
  display: block;
  gap: 3px;
  min-width: 500px;
  min-height: 30px;
  
}

.tier-row{
  height: auto;
  min-width: 600px;
}

#lang-trash-can{
  max-width: 200px;
  background-color: antiquewhite;
  width: 20px;
  display: block;
  gap: 3px;
  min-height: 30px;
  border-radius: 0.3rem;
  padding: 3px;
}

